# kash-experimental

./: .copier-answers.yml  .gitignore  README.md  development.md  pyproject.toml
src/kash/: __init__.py
src/kash/kits/experimental/: __init__.py
src/kash/kits/experimental/actions/: add_list_of_concepts.py  create_embeddings_graph_view.py  embed_table_rows.py  exa_search_and_contents.py  find_concepts.py  find_near_duplicates.py  firecrawl_crawl.py  firecrawl_scrape.py  firecrawl_search.py  normalize_concept_list.py  show_embeddings.py  show_embeddings_graph_view.py
src/kash/kits/experimental/libs/: __init__.py
src/kash/kits/experimental/libs/concepts/: concept_relations.py
src/kash/kits/experimental/libs/query/: index_utils.py  query_commands.py  vector_indexes.py  vector_stores.py
src/kash/kits/experimental/libs/tables/: embedding_utils.py  show_tables.py  table_commands.py  table_utils.py
src/kash/kits/experimental/libs/viz/: graph_view.py  viz_commands.py  workspace_graph.py
src/kash/kits/experimental/libs/viz/templates/: force_graph_2d.html.jinja  force_graph_3d.html.jinja
src/kash/kits/research/: __init__.py
src/kash/kits/research/actions/: add_list_of_concepts.py  find_concepts.py  firecrawl_search.py  perplexity_search.py
src/kash/kits/research/libs/query/: index_utils.py  query_commands.py  vector_index.py  vector_indexes.py  vector_stores.py
src/kash/kits/research/libs/viz/: graph_view.py  viz_commands.py
src/kash/kits/research/libs/viz/templates/: force_graph_2d.html.jinja
